--- a/source/_patterns/02-molecules/card/_card.scss
+++ b/source/_patterns/02-molecules/card/_card.scss
@@ -31,6 +31,7 @@ $_config: map-merge-by-keys($_config_schemes, base, $_config_schemes, $scheme);
 }
 
 .usa-card--hover {
+  @include u-display(block);
   @include u-text-decoration(no-underline);
 }
 
