--- a/source/_patterns/02-molecules/section/_section-heading.scss
+++ b/source/_patterns/02-molecules/section/_section-heading.scss
@@ -8,7 +8,7 @@ $_config_schemes: (
 $_config: map-merge-by-keys($_config_schemes, base, $_config_schemes, $scheme);
 
 .jcc-section-heading {
-  overflow: hidden;
+  @include u-overflow(hidden);
 }
 
 .jcc-section-heading__title {
